--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clsx": "1.2.1",
     "dayjs": "1.11.5",
     "history": "5.3.0",
+    "json-server": "^0.17.3",
     "mobx": "6.6.2",
     "mobx-react": "7.5.3",
     "msw": "0.47.3",
@@ -23,11 +24,13 @@
     "react-window": "1.8.7",
     "resize-observer-polyfill": "1.5.1",
     "tss-react": "4.3.4",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "json-server --watch db.json --port 8080",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "msw-init": "npx msw init public/ --save"
@@ -61,5 +64,6 @@
     "@types/uuid": "8.3.4",
     "react-scripts": "5.0.1",
     "typescript": "4.4.2"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
